Updated web files
Now using the same css base as deauther,
also split css and js into sepereate files

--- a/index.html
+++ b/index.html
@@ -3,702 +3,60 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+  <meta name="theme-color" content="#36393E">
+
+  <meta name="description" content="WiFi Duck">
+  <meta name="author" content="Spacehuhn - Stefan Kremser">
 
   <title>WiFi Duck</title>
 
-  <style>
-    /* Copyright 2014 Owen Versteeg; MIT licensed */
-    body,
-    textarea,
-    input,
-    select {
-      background: 0;
-      border-radius: 0;
-      font: 16px sans-serif;
-      margin: 0
-    }
+  <link rel="stylesheet" type="text/css" href="style.css">
 
-    .smooth {
-      transition: all .2s
-    }
-
-    .btn,
-    .nav a {
-      text-decoration: none
-    }
-
-    .container {
-      margin: 0 20px;
-      width: auto
-    }
-
-    label>* {
-      display: inline
-    }
-
-    form>* {
-      display: block;
-      margin-bottom: 10px
-    }
-
-    .btn {
-      background: #999;
-      border-radius: 6px;
-      border: 0;
-      color: #fff;
-      cursor: pointer;
-      display: inline-block;
-      margin: 2px;
-      padding: 12px 30px 14px
-    }
-
-    .btn:hover {
-      background: #888
-    }
-
-    .btn:active,
-    .btn:focus {
-      background: #777
-    }
-
-    .btn-a {
-      background: #0ae
-    }
-
-    .btn-a:hover {
-      background: #09d
-    }
-
-    .btn-a:active,
-    .btn-a:focus {
-      background: #08b
-    }
-
-    .btn-b {
-      background: #3c5
-    }
-
-    .btn-b:hover {
-      background: #2b4
-    }
-
-    .btn-b:active,
-    .btn-b:focus {
-      background: #2a4
-    }
-
-    .btn-c {
-      background: #d33
-    }
-
-    .btn-c:hover {
-      background: #c22
-    }
-
-    .btn-c:active,
-    .btn-c:focus {
-      background: #b22
-    }
-
-    .btn-sm {
-      border-radius: 4px;
-      padding: 10px 14px 11px
-    }
-
-    .row {
-      margin: 1% 0;
-      overflow: auto
-    }
-
-    .col {
-      float: left
-    }
-
-    .table,
-    .c12 {
-      width: 100%
-    }
-
-    .c11 {
-      width: 91.66%
-    }
-
-    .c10 {
-      width: 83.33%
-    }
-
-    .c9 {
-      width: 75%
-    }
-
-    .c8 {
-      width: 66.66%
-    }
-
-    .c7 {
-      width: 58.33%
-    }
-
-    .c6 {
-      width: 50%
-    }
-
-    .c5 {
-      width: 41.66%
-    }
-
-    .c4 {
-      width: 33.33%
-    }
-
-    .c3 {
-      width: 25%
-    }
-
-    .c2 {
-      width: 16.66%
-    }
-
-    .c1 {
-      width: 8.33%
-    }
-
-    h1 {
-      font-size: 3em
-    }
-
-    .btn,
-    h2 {
-      font-size: 2em
-    }
-
-    .ico {
-      font: 33px Arial Unicode MS, Lucida Sans Unicode
-    }
-
-    .addon,
-    .btn-sm,
-    .nav,
-    textarea,
-    input,
-    select {
-      outline: 0;
-      font-size: 14px
-    }
-
-    textarea,
-    input,
-    select {
-      padding: 8px;
-      border: 1px solid #ccc
-    }
-
-    textarea:focus,
-    input:focus,
-    select:focus {
-      border-color: #5ab
-    }
-
-    textarea,
-    input[type=text] {
-      -webkit-appearance: none;
-      width: 13em
-    }
-
-    .addon {
-      padding: 8px 12px;
-      box-shadow: 0 0 0 1px #ccc
-    }
-
-    .nav,
-    .nav .current,
-    .nav a:hover {
-      background: #000;
-      color: #fff
-    }
-
-    .nav {
-      height: 24px;
-      padding: 11px 0 15px
-    }
-
-    .nav a {
-      color: #aaa;
-      padding-right: 1em;
-      position: relative;
-      top: -1px
-    }
-
-    .nav .pagename {
-      font-size: 22px;
-      top: 1px
-    }
-
-    .btn.btn-close {
-      background: #000;
-      float: right;
-      font-size: 25px;
-      margin: -54px 7px;
-      display: none
-    }
-
-    @media(min-width:1310px) {
-      .container {
-        margin: auto;
-        width: 1270px
-      }
-    }
-
-    @media(max-width:870px) {
-      .row .col {
-        width: 100%
-      }
-    }
-
-    @media(max-width:500px) {
-      .btn.btn-close {
-        display: block
-      }
-
-      .nav {
-        overflow: hidden
-      }
-
-      .pagename {
-        margin-top: -11px
-      }
-
-      .nav:active,
-      .nav:focus {
-        height: auto
-      }
-
-      .nav div:before {
-        background: #000;
-        border-bottom: 10px double;
-        border-top: 3px solid;
-        content: '';
-        float: right;
-        height: 4px;
-        position: relative;
-        right: 3px;
-        top: 14px;
-        width: 20px
-      }
-
-      .nav a {
-        padding: .5em 0;
-        display: block;
-        width: 50%
-      }
-    }
-
-    .table th,
-    .table td {
-      padding: .5em;
-      text-align: left
-    }
-
-    .table tbody>:nth-child(2n-1) {
-      background: #f2f2f2
-    }
-
-    .msg {
-      padding: 1.5em;
-      background: #def;
-      border-left: 5px solid #59d
-    }
-
-    #status {
-      text-align: center;
-      padding: 0.5rem;
-      color: #fff;
-      position: sticky;
-      top: 0;
-    }
-
-    textarea {
-      border-radius: 4px;
-      background: #ddd;
-      border: none;
-      width: 100%;
-      height: 10rem;
-      box-sizing: border-box;
-      -moz-box-sizing: border-box;
-      -webkit-box-sizing: border-box;
-      margin: .5rem 0;
-    }
-
-    input[type="text"] {
-      border-radius: 4px;
-      background: #ddd;
-      border: none;
-    }
-  </style>
-
-  <script>
-    function status(mode) {
-      if (mode == "connected") {
-        document.getElementById("status").style.backgroundColor = "#3c5";
-      } else if (mode == "disconnected") {
-        document.getElementById("status").style.backgroundColor = "#d33";
-      } else if (mode == "connecting...") {
-        document.getElementById("status").style.backgroundColor = "#0ae";
-      }
-
-      document.getElementById("status").innerHTML = mode;
-    }
-
-    function log(msg) {
-      console.log("[WS] Message: " + msg);
-    }
-
-    var ws;
-    var ws_callback = log;
-    var file_list = "";
-    var messageQueue = [];
-    var cts = false;
-
-    // ===== Helper Functions ===== //
-    function getNewFileName() {
-      return document.getElementById("newFile").value;
-    }
-
-    function getEditorFileName() {
-      return document.getElementById("editorFile").value;
-    }
-
-    function getEditorContent() {
-      return document.getElementById("editor").value;
-    }
-
-    function fixFileName(fileName) {
-      if (fileName.length > 0 && fileName[0] != '/') fileName = '/' + fileName;
-      fileName = fileName.replace(/ /g, '\-');
-      return fileName;
-    }
-
-    // ===== WebSocket Functions ===== //
-    function ws_init() {
-      status("connecting...");
-      ws = new WebSocket("ws://192.168.4.1/ws");
-      ws.onopen = ws_open;
-      ws.onclose = ws_close;
-      ws.onmessage = ws_message;
-      ws.onerror = ws_error;
-
-      cts = true;
-    }
-
-    function ws_open(evt) {
-      console.log("[WS] Connected");
-      status("connected");
-      ws_memory(ws_ls);
-    }
-
-    function ws_close(evt) {
-      console.log("[WS] Disconnected");
-      status("disconnected");
-    }
-
-    function ws_message(evt) {
-      var msg = evt.data;
-
-      console.debug("> " + evt.data);
-
-      if (msg.length > 0) {
-        if (msg[0] == '>') log(msg.substring(2));
-        ws_callback(msg);
-      }
-      cts = true;
-    }
-
-    function ws_error(evt) {
-      console.log("[WS] Error");
-      status("errored");
-    }
-
-    function ws_send(message, callback) {
-      messageQueue.push({
-        "message": message,
-        "callback": callback
-      });
-    }
-
-    // ===== WebSocket Actions ===== //
-    function ws_memory(callback) {
-      ws_send("mem", function(msg) {
-        var lines = msg.split(/\n/);
-        var byte = lines[0].split(" ")[0];
-        var used = lines[1].split(" ")[0];
-        var free = lines[2].split(" ")[0];
-
-        var percent = Math.floor(byte / 100);
-        var freepercent = Math.floor(free / percent);
-
-        document.getElementById("freeMemory").innerHTML = used + " byte used (" + freepercent + "% free)";
-        if (callback) callback();
-      });
-    }
-
-    function ws_run(fileName) {
-      fileName = fixFileName(fileName);
-      ws_send("run \"" + fileName + "\"", log);
-    }
-
-    function ws_format() {
-      if (confirm("Format SPIFFS? This will delete all scripts!")) {
-        ws_send("format", log);
-        alert("Formatting will take a minute. You need to reconnect afterwards.");
-      }
-    }
-
-    function ws_stop(fileName) {
-      fileName = fixFileName(fileName);
-      ws_send("stop \"" + fileName + "\"", log);
-    }
-
-    function ws_ls() {
-      file_list = "";
-      ws_send("ls\n", function(csv) {
-        file_list += csv;
-
-        //console.log(file_list);
-
-        var lines = file_list.split(/\n/);
-        var tableHTML = "<thead><tr><th>File</th><th>Size</th><th>Actions</th></tr></thead><tbody>";
-
-        for (var i = 0; i < lines.length; i++) {
-          //console.log(lines[i]);
-          var data = lines[i].split(" ");
-          var fileName = data[0];
-          var fileSize = data[1];
-          if (fileName.length > 0) {
-            tableHTML += "<tr><td>" + fileName + "</td>";
-            tableHTML += "<td>" + fileSize + "</td>";
-            tableHTML += "<td><a class=\"btn btn-a btn-sm smooth\" onclick=\"ws_cat('" + fileName + "')\">edit</a>";
-            tableHTML += "<a class=\"btn btn-c btn-sm smooth\" onclick=\"ws_run('" + fileName + "')\">run</a></td></tr>";
-          }
-        }
-
-        tableHTML += "<tr><td><input type=\"text\" class=\"smooth\" value=\"/\" id=\"newFile\"/></td>";
-        tableHTML += "<td>-</td>";
-        tableHTML += "<td><a class=\"btn btn-b btn-sm smooth\" onclick=\"ws_create(getNewFileName())\">create</a></td>";
-        tableHTML += "</tr></tbody>";
-
-        document.getElementById("scriptTable").innerHTML = tableHTML;
-      });
-    }
-
-    function ws_read() {
-      ws_send("read", function(content) {
-        if (content != "> END") {
-          document.getElementById("editor").value += content;
-          ws_read();
-        } else {
-          ws_send("close", log);
-        }
-      });
-    }
-
-    function ws_cat(fileName) {
-      ws_stop(fileName);
-
-      fileName = fixFileName(fileName);
-
-      document.getElementById("editorFile").value = fileName;
-      document.getElementById("editor").value = "";
-
-      ws_send("stream \"" + fileName + "\"\n", log);
-      ws_read();
-    }
-
-    function ws_create(fileName) {
-      ws_stop(fileName);
-
-      fileName = fixFileName(fileName);
-
-      document.getElementById("editorFile").value = fileName;
-      document.getElementById("editor").value = "";
-
-      ws_send("create \"" + fileName + "\"\n", log);
-    }
-
-    function ws_write(fileName, content) {
-      ws_stop(fileName);
-
-      fileName = fixFileName(fileName);
-      content = content.replace(/"/g, '\\"');
-
-      ws_send("remove \"/temporary_script\"", log);
-      ws_send("create \"/temporary_script\"", log);
-
-      ws_send("stream \"/temporary_script\"", log);
-
-      var pktsize = 64;
-      for (var i = 0; i < Math.ceil(content.length / pktsize); i++) {
-        var begin = i * pktsize;
-        var end = begin + pktsize;
-        if (end > content.length) end = content.length;
-
-        ws_send(content.substring(begin, end), log);
-      }
-      ws_send("close", log);
-
-      ws_send("remove \"" + fileName + "\"", log);
-      ws_send("rename \"/temporary_script\" \"" + fileName + "\"", log);
-
-      ws_ls();
-    }
-
-    function ws_remove(fileName) {
-      ws_stop(fileName);
-
-      fileName = fixFileName(fileName);
-      ws_send("remove \"" + fileName + "\"", log);
-
-      ws_ls();
-    }
-
-
-    // ===== Startup ===== //
-    window.addEventListener("load", function() {
-
-      document.getElementById("scriptsReload").onclick = function() {
-        ws_memory(ws_ls);
-      };
-
-      document.getElementById("reconnect").onclick = function() {
-        ws_init();
-      };
-
-      document.getElementById("format").onclick = function() {
-        ws_format();
-      };
-
-      document.getElementById("stop").onclick = function() {
-        ws_stop("");
-      };
-
-      document.getElementById("editorReload").onclick = function() {
-        ws_cat(getEditorFileName());
-      };
-
-      document.getElementById("editorSave").onclick = function() {
-        ws_write(getEditorFileName(), getEditorContent());
-      };
-
-      document.getElementById("editorDelete").onclick = function() {
-        if (confirm("Delete " + getEditorFileName() + "?")) ws_remove(getEditorFileName());
-      };
-
-      document.getElementById("editorDownload").onclick = function() {
-        fileName = getEditorFileName();
-        content = getEditorContent();
-
-        var element = document.createElement('a');
-        element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(content));
-        element.setAttribute('download', fileName);
-
-        element.style.display = 'none';
-        document.body.appendChild(element);
-
-        element.click();
-
-        document.body.removeChild(element);
-      };
-
-      document.getElementById("editorStop").onclick = function() {
-        ws_stop(getEditorFileName());
-      }
-
-      document.getElementById("editorRun").onclick = function() {
-        ws_run(getEditorFileName());
-      };
-
-      ws_init();
-
-      setInterval(function() {
-        if (cts && messageQueue.length > 0) {
-          var item = messageQueue.shift();
-
-          var message = item.message;
-          var callback = item.callback;
-
-          ws.send(message);
-          ws_callback = callback;
-
-          console.debug("# " + message);
-
-          cts = false;
-        }
-
-      }, 1);
-    }, false);
-  </script>
+  <script src="script.js"></script>
 </head>
 
 <body>
 
-  <nav class="nav" tabindex="-1" onclick="this.focus()">
-    <div class="container">
-      <a class="pagename current" href="index.html">WiFi Duck</a>
-      <!--
-      <a href="#">One</a>
-      <a href="#">Two</a>
-      <a href="#">Three</a>-->
-    </div>
+  <nav>
+    <b>WiFi Duck</b> version NaN
   </nav>
-  <button class="btn-close btn btn-sm">×</button>
 
   <div id="status"></div>
 
   <div class="container">
-
     <div class="row">
-      <div class="col c12">
+      <div class="col-12">
+
         <h2>Status</h2>
-        <a class="btn btn-a btn-sm smooth" id="reconnect">reconnect</a>
-        <a class="btn btn-c btn-sm smooth" id="format">format</a>
-        <a class="btn btn-c btn-sm smooth" id="stop">stop</a>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col c12">
-        <h2>Scripts <a class="btn btn-a btn-sm smooth" id="scriptsReload">reload</a></h2>
-        <table class="table" id="scriptTable"></table>
+        <button class=" danger" id="format">format</button>
+        <button class=" warn" id="stop">stop</button>
+        <button class="" id="reconnect">reconnect</button>
         <p><b>SPIFFS: </b><span id="freeMemory">-</span></p>
-      </div>
-    </div>
 
-    <div class="row">
+        <h2>Scripts <a class="reload" id="scriptsReload">&#x21bb;</a></h2>
+        <table class="table" id="scriptTable"></table>
 
-      <div class="col c12">
-        <h2>Editor <a class="btn btn-a btn-sm smooth" id="editorReload">reload</a></h2>
+        <h2>Editor <a class="reload" id="editorReload">&#x21bb;</a></h2>
 
-        <input type="text" class="smooth" value="/example" id="editorFile" />
-        <textarea class="smooth" id="editor">
-REM Hello World!
-        </textarea>
+        <label>Filename:</label>
+        <input type="text" class="smooth" value="/example" id="editorFile">
 
-        <a class="btn btn-b btn-sm smooth" id="editorSave">save</a>
-        <a class="btn btn-c btn-sm smooth" id="editorDelete">delete</a>
-        <a class="btn btn-a btn-sm smooth" id="editorDownload">download</a>
-        <a class="btn btn-c btn-sm smooth" id="editorStop">stop</a>
-        <a class="btn btn-c btn-sm smooth" id="editorRun">run</a>
-      </div>
+        <textarea class="smooth" id="editor">REM Hello World!</textarea>
 
-    </div>
+        <button class="danger" id="editorDelete">delete</button>
+        <button class="warn" id="editorRun">run</button>
+        <button class="warn" id="editorStop">stop</button>
+        <button class="primary" id="editorDownload">download</button>
+        <button class="success" id="editorSave">save</button>
 
-    <div class="row">
-      <div class="col c12">
         <hr>
+
         <p>WiFi Duck version -1 | Copyleft myself</p>
+
       </div>
     </div>
-
   </div>
 
 </body>
