Updated credits and terminal.html and added missing data

--- a/web/credits.html
+++ b/web/credits.html
@@ -15,7 +15,7 @@
   <meta name="description" content="WiFi Duck">
   <meta name="author" content="Spacehuhn - Stefan Kremser">
 
-  <title>WiFi Duck</title>
+  <title>WiFi Duck Credits</title>
 
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -35,7 +35,7 @@
           This is a tool.<br>
           It's neither good nor bad.<br>
           Use it to do good, to study and to test.<br>
-          Never use it to create harm or do damage!<br>
+          Never use it to do harm or create damage!<br>
           <br>
           The continuation of this project counts on you!
         </p>
@@ -85,9 +85,10 @@
         </p>
 
         <div id="copyright">
+          <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a> |
           <a href="https://github.com/spacehuhn/WiFiDuck/wiki" target="_blank">Wiki</a> |
-          <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">GitHub</a> |
-          <a href="credits.html" target="_blank">Credits</a>
+          <a href="terminal.html">Terminal</a> |
+          <a href="credits.html">Credits</a>
           <br>
           <br>
           Version 1.0<br>
