--- a/web/terminal.html
+++ b/web/terminal.html
@@ -15,7 +15,7 @@
   <meta name="description" content="WiFi Duck">
   <meta name="author" content="Spacehuhn - Stefan Kremser">
 
-  <title>WiFi Duck</title>
+  <title>WiFi Duck Terminal</title>
 
   <link rel="stylesheet" type="text/css" href="style.css">
 
