--- a/web/credits.html
+++ b/web/credits.html
@@ -23,7 +23,8 @@
 <body>
 
   <nav>
-    <a href="index.html">WiFi Duck</a> | Credits
+    <a href="index.html">WiFi Duck</a>
+    <a href="settings.html">Settings</a>
   </nav>
 
   <div class="container">
@@ -87,6 +88,7 @@
         <div id="copyright">
           <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a> |
           <a href="https://github.com/spacehuhn/WiFiDuck/wiki" target="_blank">Wiki</a> |
+          <a href="settings.html">Settings</a> |
           <a href="terminal.html">Terminal</a> |
           <a href="credits.html">Credits</a>
           <br>
