--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,7 @@
 
   <nav>
     <a href="index.html">WiFi Duck</a>
+    <a href="settings.html">Settings</a>
   </nav>
 
   <div id="status"></div>
@@ -60,6 +61,7 @@
         <div id="copyright">
           <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a> |
           <a href="https://github.com/spacehuhn/WiFiDuck/wiki" target="_blank">Wiki</a> |
+          <a href="settings.html">Settings</a> |
           <a href="terminal.html">Terminal</a> |
           <a href="credits.html">Credits</a>
           <br>
