--- a/web/terminal.html
+++ b/web/terminal.html
@@ -35,7 +35,8 @@
 <body>
 
   <nav>
-    <a href="index.html">WiFi Duck</a> | Terminal
+    <a href="index.html">WiFi Duck</a>
+    <a href="settings.html">Settings</a>
   </nav>
 
   <div id="status"></div>
@@ -57,6 +58,7 @@
         <div id="copyright">
           <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a> |
           <a href="https://github.com/spacehuhn/WiFiDuck/wiki" target="_blank">Wiki</a> |
+          <a href="settings.html">Settings</a> |
           <a href="terminal.html">Terminal</a> |
           <a href="credits.html">Credits</a>
           <br>
