Rearranged footer of web interface

--- a/web/credits.html
+++ b/web/credits.html
@@ -85,18 +85,17 @@
           and YOU for using it!
         </p>
 
-        <div id="copyright">
-          <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a> |
-          <a href="https://github.com/spacehuhn/WiFiDuck/wiki" target="_blank">Wiki</a> |
+        <footer>
           <a href="settings.html">Settings</a> |
           <a href="terminal.html">Terminal</a> |
-          <a href="credits.html">Credits</a>
-          <br>
-          <br>
+          <a href="credits.html">Credits</a> |
+          <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a> |
+          <a href="https://github.com/spacehuhn/WiFiDuck/wiki" target="_blank">Wiki</a>
+          <br><br>
           Version 1.0<br>
           Copyright (c) 2019 Stefan Kremser<br>
           <a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
-        </div>
+        </footer>
 
       </div>
     </div>
