--- a/web/settings.html
+++ b/web/settings.html
@@ -54,21 +54,21 @@
             <td id="channel"></td>
             <td><button class="primary" id="edit_channel">edit</button></td>
           </tr>
-
         </table>
 
-        <div id="copyright">
-          <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a> |
-          <a href="https://github.com/spacehuhn/WiFiDuck/wiki" target="_blank">Wiki</a> |
+        <p>Restart the device to apply new settings.</p>
+
+        <footer>
           <a href="settings.html">Settings</a> |
           <a href="terminal.html">Terminal</a> |
-          <a href="credits.html">Credits</a>
-          <br>
-          <br>
+          <a href="credits.html">Credits</a> |
+          <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a> |
+          <a href="https://github.com/spacehuhn/WiFiDuck/wiki" target="_blank">Wiki</a>
+          <br><br>
           Version 1.0<br>
           Copyright (c) 2019 Stefan Kremser<br>
           <a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
-        </div>
+        </footer>
 
       </div>
     </div>
