Fixed copy paste error

--- a/web/credits.html
+++ b/web/credits.html
@@ -70,7 +70,7 @@
           Other software used for this project:<br>
           - <a href="https://www.arduino.cc" target="_blank">Arduino</a><br>
           - <a href="https://github.com/adafruit/Adafruit_NeoPixel" target="_blank">Neopixel Lib</a><br>
-          - <a href="https://github.com/esp8266/Arduino" target="_blank">ESP8266 Arduino Core (license) (link to github)</a><br>
+          - <a href="https://github.com/esp8266/Arduino" target="_blank">ESP8266 Arduino Core</a><br>
           - <a href="https://github.com/me-no-dev/ESPAsyncTCP" target="_blank">ESPAsyncTCP</a><br>
           - <a href="https://github.com/me-no-dev/ESPAsyncWebServer" target="_blank">ESPAsyncWebServer</a><br>
           - <a href="https://github.com/spacehuhn/SimpleCLI" target="_blank">SimpleCLI</a>
@@ -82,7 +82,7 @@
           - <a href="https://deantonious.es" target="_blank">deantonious</a> for helping to design and improve the user experience<br>
           - <a href="youtube.com/seytonic" target="_blank">Seytonic</a> for educating people about the topic<br>
           - <a href="https://dstike.com/" target="_blank">Travis Lin</a> for creating, selling and financially supporting us with custom made hardware<br>
-          and YOU for using it!
+          - and YOU for using it!
         </p>
 
         <footer>
