WIP startup script

--- a/web/credits.html
+++ b/web/credits.html
@@ -93,7 +93,7 @@
           <a href="https://github.com/spacehuhn/WiFiDuck/wiki" target="_blank">Wiki</a>
           <br><br>
           Version 1.0<br>
-          Copyright (c) <script>document.write(new Date().getFullYear());</script> Stefan Kremser<br>
+          Copyright (c) 2019 Stefan Kremser<br>
           <a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
         </footer>
 
