--- a/web/settings.html
+++ b/web/settings.html
@@ -54,6 +54,11 @@
             <td id="channel"></td>
             <td><button class="primary" id="edit_channel">edit</button></td>
           </tr>
+		  <tr>
+            <td>Startup:</td>
+            <td id="startup"></td>
+            <td><button class="primary" id="remove_startup">remove</button></td>
+          </tr>
         </table>
 
         <p>Restart the device to apply new settings.</p>
@@ -79,7 +84,7 @@
           <a href="https://github.com/spacehuhn/WiFiDuck/wiki" target="_blank">Wiki</a>
           <br><br>
           Version 1.0<br>
-          Copyright (c) <script>document.write(new Date().getFullYear());</script> Stefan Kremser<br>
+          Copyright (c) 2019 Stefan Kremser<br>
           <a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
         </footer>
 
