--- a/web/credits.html
+++ b/web/credits.html
@@ -92,8 +92,8 @@
           <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a> |
           <a href="https://github.com/spacehuhn/WiFiDuck/wiki" target="_blank">Wiki</a>
           <br><br>
-          Version 1.0<br>
-          Copyright (c) <script>document.write(new Date().getFullYear());</script> Stefan Kremser<br>
+          Version CURRENT_VERSION<br>
+          Copyright (c) 2019 Stefan Kremser<br>
           <a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
         </footer>
 
