--- a/web/index.html
+++ b/web/index.html
@@ -67,7 +67,7 @@
           <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a> |
           <a href="https://github.com/spacehuhn/WiFiDuck/wiki" target="_blank">Wiki</a>
           <br><br>
-          Version CURRENT_VERSION<br>
+          Version %CURRENT_VERSION%<br>
           Copyright (c) 2019 Stefan Kremser<br>
           <a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
         </footer>
