--- a/web/error404.html
+++ b/web/error404.html
@@ -43,7 +43,7 @@
           <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a> |
           <a href="https://github.com/spacehuhn/WiFiDuck/wiki" target="_blank">Wiki</a>
           <br><br>
-          Version %CURRENT_VERSION%<br>
+          Version <span id="version">1.0</span><br>
           Copyright (c) 2019 Stefan Kremser<br>
           <a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
         </footer>
