--- a/web/error404.html
+++ b/web/error404.html
@@ -18,6 +18,8 @@
   <title>WiFi Duck Not Found</title>
 
   <link rel="stylesheet" type="text/css" href="style.css">
+  
+  <script src="script.js"></script>
 </head>
 
 <body>
@@ -43,7 +45,7 @@
           <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a> |
           <a href="https://github.com/spacehuhn/WiFiDuck/wiki" target="_blank">Wiki</a>
           <br><br>
-          Version 1.0<br>
+          Version <span id="version">1.0</span><br>
           Copyright (c) 2019 Stefan Kremser<br>
           <a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
         </footer>
