Reworked autorun script
- Removed it from communication module
- Renamed startup to autorun
- Moved enable button to the editor

--- a/web/index.html
+++ b/web/index.html
@@ -57,6 +57,8 @@
         <button class="warn" id="editorStop">stop</button>
         <button class="warn" id="editorRun">run</button>
         <button class="success" id="editorSave">save</button>
+        <br>
+        <button class="primary" id="editorAutorun">Enable autorun</button>
 
         <p id="editorinfo">saved</p>
 
