--- a/web/settings.html
+++ b/web/settings.html
@@ -54,11 +54,11 @@
             <td id="channel"></td>
             <td><button class="primary" id="edit_channel">edit</button></td>
           </tr>
-		  <tr>
-            <td>Startup:</td>
-            <td id="startup"></td>
-            <td><button class="primary" id="remove_startup">remove</button></td>
-		  </tr>
+          <tr>
+            <td>Autorun Script:</td>
+            <td id="autorun"></td>
+            <td><button class="warn" id="disable_autorun">disable</button></td>
+          </tr>
         </table>
 
         <p>Restart the device to apply new settings.</p>
