Updated index.html added Ducky Script basics

--- a/web/index.html
+++ b/web/index.html
@@ -68,13 +68,44 @@
 
         <h3>Ducky Script</h3>
 
+        <h4>Basics</h4>
+
+        <p>
+          Keys are separated by a single space.<br>
+          Everything written in a single line gets pressed and released at the same time.<br>
+          To write text, use the STRING function.
+        </p>
+
+        <table>
+          <thead>
+            <tr>
+              <th>Example</th>
+              <th>Explanation</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>WINDOWS <br> r</td>
+              <td>Type the Windows key and then the r key</td>
+            </tr>
+            <tr>
+              <td>WINDOWS r</td>
+              <td>Press the Windows key and the r key simultaneously</td>
+            </tr>
+            <tr>
+              <td>STRING WINDOWS r</td>
+              <td>Write WINDOWS r</td>
+            </tr>
+          </tbody>
+        </table>
+
         <h4>Functions</h4>
         <table id="ducky-functions-table">
           <thead>
             <tr>
-              <th scope="col">Command</th>
-              <th scope="col">Example</th>
-              <th scope="col">Description</th>
+              <th>Command</th>
+              <th>Example</th>
+              <th>Description</th>
             </tr>
           </thead>
           <tbody>
