--- a/web/index.html
+++ b/web/index.html
@@ -48,9 +48,9 @@
         <h2>Editor <a class="reload" id="editorReload">&#x21bb;</a></h2>
 
         <label>Filename:</label>
-        <input type="text" class="smooth" value="/example" id="editorFile">
+        <input type="text" class="smooth" value="" id="editorFile">
 
-        <textarea class="smooth" id="editor">REM Hello World!</textarea>
+        <textarea class="smooth" id="editor"></textarea>
 
         <button class="danger" id="editorDelete">delete</button>
         <button class="primary" id="editorDownload">download</button>
