--- a/web/index.html
+++ b/web/index.html
@@ -54,7 +54,7 @@
 
         <div id="editor-primary-buttons">
           <p>
-            <button class="warn" id="editorRun">⯈run</button>
+            <button class="warn" id="editorRun">run</button>
             <button class="success" id="editorSave">save</button>
           </p>
         </div>
@@ -64,7 +64,7 @@
         <button class="danger" id="editorDelete">delete</button>
         <button class="warn" id="editorStop">stop</button>
         <br>
-        <button class="primary" id="editorDownload">🡇download</button>
+        <button class="primary" id="editorDownload">download</button>
         <button class="primary" id="editorAutorun">Enable autorun</button>
 
 
